--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
   "manifest_version": 2,
   "name": "El Pais Sin Registro",
   "version": "0.1",
+  "icons": {
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
+  },
   "content_scripts": [
       {
         "matches": [
